# server/services/auth/providers/GoogleProvider.ts
@@ -1,0 +1,9 @@
+import { Provider } from "./Provider";
+
+new (class GoogleProvider extends Provider {
+	constructor() {
+		super({ token: { type: "string" } }, "google");
+	}
+	async login() {}
+	async register() {}
+})();
